feature: criação de dialog apra ediçãod e dados de pessoa e métodos

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,26 +1,53 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
     <title>Listagem de Pessoas</title>
 </h:head>
 <h:body>
-    <h2>Pessoas</h2>
-    <p:dataTable var="pessoa" value="#{pessoaBean.pessoas}" emptyMessage="Nenhuma pessoa encontrada.">
-        <p:column headerText="ID">
-            #{pessoa.id}
-        </p:column>
-        <p:column headerText="Nome">
-            #{pessoa.nome}
-        </p:column>
-        <p:column headerText="Data de Nascimento">
-            #{pessoa.dataNascimento}
-        </p:column>
-        <p:column headerText="Sexo">
-            #{pessoa.sexo}
-        </p:column>
-    </p:dataTable>
+    <h1>Listagem de Pessoas</h1>
+    <h:form id="formLista">
+        <p:dataTable var="pessoa" id="pessoasTable" value="#{pessoaBean.pessoas}"
+                     emptyMessage="Nenhuma pessoa encontrada." paginator="true" rows="10" paginatorPosition="bottom"
+                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                     rowsPerPageTemplate="5,10,15">
+            <p:column headerText="Código">
+                #{pessoa.id}
+            </p:column>
+            <p:column headerText="Nome">
+                #{pessoa.nome}
+            </p:column>
+            <p:column headerText="Data de Nascimento" >
+                <h:outputText value="#{pessoa.dataNascimento}" >
+                    <f:convertDateTime pattern="dd/MM/yyyy" />
+                </h:outputText>
+            </p:column>
+            <p:column headerText="Sexo">
+                #{pessoa.sexo}
+            </p:column>
+
+            <p:column headerText="Ações" style="width:100px;text-align:center;">
+                <p:commandButton icon="pi pi-pencil" title="Editar" update=":editDialog" oncomplete="PF('dlgEditPessoa').show()">
+                    <f:setPropertyActionListener target="#{pessoaBean.pessoaSelecionada}" value="#{pessoa}" />
+
+                </p:commandButton>
+                <p:commandButton icon="pi pi-trash" title="Excluir" update=":editDialog" >
+                    <f:setPropertyActionListener target="#{pessoaBean.pessoaSelecionada}" value="#{pessoa}" />
+                    <p:confirm header="Confirmação" message="Você tem certeza?" icon="pi pi-exclamation-triangle" />
+                </p:commandButton>
+            </p:column>
+        </p:dataTable>
+        <!-- Diálogo de confirmação para exclusão -->
+        <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
+            <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="pi pi-check"/>
+            <p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="pi pi-times"/>
+        </p:confirmDialog>
+    </h:form>
+
+    <ui:include src="/editar-dialog.xhtml"/>
+
 </h:body>
 </html>
