--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,54 +5,68 @@
       xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
-    <title>Listagem de Pessoas</title>
+    <title>Crud de Pessoas</title>
+    <link rel="stylesheet" href="estilos/estilos.css"/>
 </h:head>
 <h:body>
-    <h1>Listagem de Pessoas</h1>
-    <h:form id="formLista">
-        <p:dataTable var="pessoa" id="pessoasTable" value="#{pessoaBean.pessoas}"
-                     emptyMessage="Nenhuma pessoa encontrada." paginator="true" rows="10" paginatorPosition="bottom"
-                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                     rowsPerPageTemplate="5,10,15">
-            <p:column headerText="Código">
-                #{pessoa.id}
-            </p:column>
-            <p:column headerText="Nome">
-                #{pessoa.nome}
-            </p:column>
-            <p:column headerText="Data de Nascimento" >
-                <h:outputText value="#{pessoa.dataNascimento}" >
-                    <f:convertDateTime pattern="dd/MM/yyyy" />
-                </h:outputText>
-            </p:column>
-            <p:column headerText="Sexo">
-                #{pessoa.sexo}
-            </p:column>
+    <h1 class="tituloPrincipal">Crud de Pessoas</h1>
+    <h:form id="formPessoas">
+        <div class="div-table-pessoas">
+            <p:dataTable var="pessoa" id="pessoasTable" value="#{pessoaBean.pessoas}"
+                         emptyMessage="Nenhuma pessoa encontrada." paginator="true" rows="10" paginatorPosition="bottom"
+                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                         rowsPerPageTemplate="5,10,15" scrollable="true" scrollHeight="100%"
+                         class="pessoa-table">
+                <p:column headerText="Código">
+                    #{pessoa.id}
+                </p:column>
+                <p:column headerText="Nome">
+                    #{pessoa.nome}
+                </p:column>
+                <p:column headerText="Data de Nascimento" >
+                    <h:outputText value="#{pessoa.dataNascimento}" >
+                        <f:convertDateTime pattern="dd/MM/yyyy" />
+                    </h:outputText>
+                </p:column>
+                <p:column headerText="Sexo">
+                    #{pessoa.sexo}
+                </p:column>
 
-            <p:column headerText="Ações" style="width:100px;text-align:center;">
-                <p:commandButton icon="pi pi-pencil" title="Editar" update=":editDialog" oncomplete="PF('dlgEditPessoa').show()">
-                    <f:setPropertyActionListener target="#{pessoaBean.pessoaSelecionada}" value="#{pessoa}" />
-                </p:commandButton>
+                <p:column >
+                    <p:commandButton value="Endereços" icon="pi pi-eye"
+                                     update=":enderecosDialog" oncomplete="PF('dlgEnderecos').show();" >
+                        <f:setPropertyActionListener target="#{pessoaBean.pessoaSelecionada}" value="#{pessoa}" />
+                    </p:commandButton>
+                </p:column>
 
-                <p:commandButton icon="pi pi-trash" title="Excluir" oncomplete="PF('confirmDialog').show();" >
-                    <f:setPropertyActionListener target="#{pessoaBean.pessoaSelecionada}" value="#{pessoa}" />
-                </p:commandButton>
+                <p:column headerText="Ações" style="width:100px;text-align:center;">
+                    <p:commandButton icon="pi pi-pencil" title="Editar" update=":editDialog" oncomplete="PF('dlgEditPessoa').show()" style="margin-right: 5px">
+                        <f:setPropertyActionListener target="#{pessoaBean.pessoaSelecionada}" value="#{pessoa}" />
+                    </p:commandButton>
 
-            </p:column>
-        </p:dataTable>
+                    <p:commandButton icon="pi pi-trash" title="Excluir" oncomplete="PF('confirmDialog').show();" >
+                        <f:setPropertyActionListener target="#{pessoaBean.pessoaSelecionada}" value="#{pessoa}" />
+                    </p:commandButton>
+
+                </p:column>
+            </p:dataTable>
+        </div>
         <!-- Diálogo de confirmação para exclusão -->
         <p:confirmDialog id="confirmDialog" widgetVar="confirmDialog" global="true" showEffect="fade" hideEffect="fade"
                          header="Confirmação" icon="pi pi-exclamation-triangle" message="Tem certeza que deseja excluir esta pessoa?" responsive="true">
             <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="pi pi-check" >
-                <p:ajax listener="#{pessoaBean.excluir}" oncomplete="PF('confirmDialog').hide();" update=":formLista:pessoasTable messages" />
+                <p:ajax listener="#{pessoaBean.excluir}" oncomplete="PF('confirmDialog').hide();" update=":formPessoas:pessoasTable messages" />
             </p:commandButton>
-            <p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="pi pi-times" action="PF('confirmDialog').hide();" update=":formLista;"/>
+            <p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="pi pi-times" action="PF('confirmDialog').hide();" update=":formPessoas;"/>
         </p:confirmDialog>
     </h:form>
 
-    <ui:include src="/editar-dialog.xhtml"/>
+    <ui:include src="/dialog/editar-pessoa-dialog.xhtml"/>
+    <ui:include src="/dialog/listar-enderecos-dialog.xhtml"/>
 
-    <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" globalOnly="true"/>
+    <p:dialog widgetVar="messagesDialog" modal="true" header="Erro" resizable="false" closable="true" showEffect="fade" hideEffect="fade"  responsive="true">
+        <p:messages id="globalMessages" showDetail="true"   />
+    </p:dialog>
 
 
 </h:body>
