feature: excluir endereço

--- a/src/main/webapp/dialog/listar-enderecos-dialog.xhtml
+++ b/src/main/webapp/dialog/listar-enderecos-dialog.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core" xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
    <title>Endereços</title>
    <link rel="stylesheet" href="../estilos/estilos.css"/>
@@ -12,34 +12,55 @@
 <f:view>
    <p:dialog widgetVar="dlgEnderecos" modal="true" header="Endereços"
              resizable="false" closable="true" showEffect="fade" hideEffect="fade"
-             id="enderecosDialog" position="center" responsive="true" width="80%">
+             id="enderecosDialog" position="center" responsive="true" width="80%" height="80%"
+             onShow="PF('dlgEnderecos').content.css('overflow', 'hidden')" style="max-height:90vh; overflow:auto;"
+             blockScroll="true">
+
       <h:form id="formEnderecos">
-         <p:dataTable var="endereco" value="#{enderecoBean.buscarEnderecosPorPessoaSelecionada()}"
-                      emptyMessage="Nenhum endereco encontrado." paginator="true" rows="10" paginatorPosition="bottom"
-                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                      rowsPerPageTemplate="5,10,15" scrollable="true" scrollHeight="100%">
-            <p:column headerText="Rua">
-               <h:outputText value="#{endereco.logradouro}"/>
-            </p:column>
-            <p:column headerText="Número">
-               <h:outputText value="#{endereco.numero}"/>
-            </p:column>
-            <p:column headerText="Bairro">
-               <h:outputText value="#{endereco.bairro}"/>
-            </p:column>
-            <p:column headerText="Cidade">
-               <h:outputText value="#{endereco.cidade}"/>
-            </p:column>
-            <p:column headerText="Estado">
-               <h:outputText value="#{endereco.estado}"/>
-            </p:column>
-            <p:column headerText="CEP">
-               <h:outputText value="#{endereco.cep}">
-                  <f:convertNumber pattern="00.000-000" />
-               </h:outputText>
-            </p:column>
-         </p:dataTable>
+         <div style="max-height:80vh; overflow:auto;">
+            <p:dataTable var="endereco" value="#{enderecoBean.buscarEnderecosPorPessoaSelecionada()}" id="enderecosTable"
+                         emptyMessage="Nenhum endereco encontrado." paginator="true" rows="10" paginatorPosition="bottom"
+                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                         rowsPerPageTemplate="5,10,15" scrollable="true" scrollHeight="90%">
+               <p:column headerText="Rua">
+                  <h:outputText value="#{endereco.logradouro}"/>
+               </p:column>
+               <p:column headerText="Número">
+                  <h:outputText value="#{endereco.numero}"/>
+               </p:column>
+               <p:column headerText="Bairro">
+                  <h:outputText value="#{endereco.bairro}"/>
+               </p:column>
+               <p:column headerText="Cidade">
+                  <h:outputText value="#{endereco.cidade}"/>
+               </p:column>
+               <p:column headerText="Estado">
+                  <h:outputText value="#{endereco.estado}"/>
+               </p:column>
+               <p:column headerText="CEP">
+                  <h:outputText value="#{endereco.cep}" mask="99999-999"/>
+               </p:column>
+               <p:column headerText="Ações" style="width:100px;text-align:center;">
+                  <p:commandButton icon="pi pi-pencil" title="Editar" update=":editEnderecoDialog" oncomplete="PF('dlgEditEndereco').show()" style="margin-right: 5px">
+                     <f:setPropertyActionListener target="#{enderecoBean.enderecoSelecionado}" value="#{endereco}" />
+                  </p:commandButton>
+
+                  <p:commandButton icon="pi pi-trash" title="Excluir" oncomplete="PF('confirmDialogEndereco').show();" >
+                     <f:setPropertyActionListener target="#{enderecoBean.enderecoSelecionado}" value="#{endereco}" />
+                  </p:commandButton>
+
+               </p:column>
+            </p:dataTable>
+         </div>
+         <p:confirmDialog id="confirmDialogEndereco" widgetVar="confirmDialogEndereco" global="true" showEffect="fade" hideEffect="fade"
+                          header="Confirmação" icon="pi pi-exclamation-triangle" message="Tem certeza que deseja excluir este endereço?" responsive="true">
+            <p:commandButton value="Sim" type="button" styleClass="ui-confirmdialog-yes" icon="pi pi-check" >
+               <p:ajax listener="#{enderecoBean.excluir}" oncomplete="PF('confirmDialogEndereco').hide();" update=":formEnderecos:enderecosTable messages" />
+            </p:commandButton>
+            <p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="pi pi-times" action="PF('confirmDialogEndereco').hide();" update=":formEnderecos;"/>
+         </p:confirmDialog>
       </h:form>
+      <ui:include src="editar-endereco-dialog.xhtml"/>
    </p:dialog>
 </f:view>
 </html>
