feature: inclusao de pessoa

--- a/src/main/webapp/dialog/listar-enderecos-dialog.xhtml
+++ b/src/main/webapp/dialog/listar-enderecos-dialog.xhtml
@@ -60,7 +60,7 @@
             <p:commandButton value="Não" type="button" styleClass="ui-confirmdialog-no" icon="pi pi-times" action="PF('confirmDialogEndereco').hide();" update=":formEnderecos;"/>
          </p:confirmDialog>
       </h:form>
-      <ui:include src="editar-endereco-dialog.xhtml"/>
+      <ui:include src="salvar-endereco-dialog.xhtml"/>
    </p:dialog>
 </f:view>
 </html>
