--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -16,7 +16,7 @@
                 <p:commandButton id="btnNovaPessoa" value="Novo Pessoa" styleClass="ui-button" icon="pi pi-plus"  title="Adicionar nova pessoa" style="margin-right: 5px">
                    <p:ajax  listener="#{pessoaBean.novo}"  update=":formPessoas:pessoasTable messages"  oncomplete="PF('dlgEditPessoa').show()"/>
                 </p:commandButton>
-                <p:commandButton id="mostrarTodos" value="Mostrar Todos" styleClass="ui-button" icon="pi pi-list"  title="Mostrar todas as pessoas" style="margin-right: 10px">
+                <p:commandButton id="mostrarTodos" value="Mostrar Todos" styleClass="ui-button" icon="pi pi-list"  title="Mostrar todas as pessoas" style="margin-right: 10px; white-space: nowrap;">
                     <p:ajax listener="#{pessoaBean.mostrarTodos}" update=":formPessoas:pessoasTable"/>
                 </p:commandButton>
             </p:panelGrid>
